--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,12 +78,24 @@
 }
 .coverimg {
   width: 100%;
+  min-width: 600px;
+
   /*
   object-fit: contain;
   overflow: hidden;
   overflow: scroll;
   */
 }
+/* Protect Cover img min resolution */
+[data-parent="0"] {
+  min-height: 400px;
+}
+[data-parent="1"] {}
+[data-parent="2"] {
+  min-height: 400px;
+}
+
+
 /* pre-formulated measurements Assistant */
 .textCenter {
   position: relative;
@@ -117,20 +129,25 @@
   display: none;
 }
 .slideText.slide0 {
-  color: white; font-size: 20px;
+  color: white;
+  font-size: 20px;
 }
 .slideText.slide1 {
-  color: white; font-size: 20px;
+  color: white;
+  font-size: 20px;
 }
 .slideText.slide2 {
-  color: black; font-size: 20px;
+  color: black;
+  font-size: 20px;
 }
 .slideTextBackground0 {
-  padding: 5px;
-  border-radius: 6px;
-  background-color: /*rgba(155,77,202,0.9);*/
-                    rgba(13,13,13,1);
+  display: inline-block;
+  text-align: center;
 
+  border-radius: 50%;
+  border: 3px solid white;
+  background-color: /*rgba(155,77,202,0.9);*/
+                    rgba(13,13,13,0.95);
 }
 .slideTextBackground2 {
   display: inline-block;
