--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -36,6 +36,7 @@
   padding: 0 !important;
 }
 .modal-body {
+  position: relative;
   padding: 0 !important;
 }
 
@@ -63,12 +64,119 @@
 }
 .modalPages.active {
   display: flex;
+  position: absolute;
+  width: 100%;
   height: 100%;
 }
 
 /* NASLOVNA */
 #pghb0 {
-  background-color: red;
-
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.coverimg {}
+#onama {
+  color: #002a4c;
+  background-color: white;
+  font-family: serif;
+  font-weight: bold;
+  font-size: 18px;
+  border: 3px solid white;
+  border-radius: 5px;
+
+  margin: 0;
+  padding: 8px;
+}
+#onama:hover { color: #00baff; }
+
+/* O NAMA (slideshow) */
+/* 1.0. Slide Buttons */
+#shBtns {
+  position: absolute;
+  display: none;
+  padding: 0;
+}
+.slideBtns[disabled] { visibility: hidden; }
+.slideBtns {
+  z-index: 1060;
+
+  border: 0;
+  border-radius: 4px;
+
+  padding: 5px 6px 3px 6px;
+
+  background-color: #9b4dca;
+}
+.slideBtns:hover { background-color: #606c76; }
+.slideBtns > i {
+  color: white;
+  font-size: 40px;
+}
+.slideBtns:hover > i {
+  color: #00baff;
+}
+
+/* 2.0. Slide Content */
+.contentContainer { display: none; }
+.slideIteratable { display: none; }
+.slideIteratable.active { display: block; }
+
+/* 2.1. Slide 1 */
+.slide1 {}
+.c1 {
+  position: absolute;
+  top: 20%;
+  right: 30%;
+
+  width: 240px;
+  height: 240px;
+
+  display: inline-block;
+  text-align: center;
+
+  color: white;
+  font-size: 25px;
+  border: 3px solid white;
+  background-color: /*rgba(155,77,202,0.9);*/
+                    rgba(13,13,13,0.95);
+  border-radius: 50%;
+}
+.c1>div {
+  margin: 45px 0 0 0;
+}
+.c2 {
+  position: absolute;
+  bottom: 60px;
+  left: 60px;
+
+  width: 180px;
+  height: 180px;
+
+  display: inline-block;
+  text-align: center;
+
+  color: white;
+  font-size: 25px;
+  border: 3px solid white;
+  background-color: /*rgba(155,77,202,0.9);*/
+                    rgba(13,13,13,0.95);
+  border-radius: 50%;
+}
+.c2>div {
+  margin: 30px 0 0 0;
+}
+
+/* 2.2. Slide 2 */
+
+
+/* 2.3. Slide 3 */
+.slide3 {
+  text-align: center;
+
+  color: black;
+  font-size: 20px;
+  border: 3px solid white;
+  border-radius: 6px;
+
+  padding: 8px 16px 8px 16px;
+  background-color: rgba(0,186,255,1);
+}
